# sandbox-axum-htmx

./: Cargo.toml
src/: main.rs
templates/: index.html
