[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
askama = { version = "0.12.1", features = ["markdown", "serde", "serde-json", "with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.9"
clap = { version = "4.5.21", features = ["env", "derive"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
